...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="Texte ici"
                android:textSize="24dp"
                android:textStyle="bold"
                android:id="@+id/mName_neigbbour"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EBEBEB"/>
            <LinearLayout
                android:layout_width="match_parent"
...
